<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/navigationMovies">

    <fragment
        android:id="@+id/navigationMovies"
        android:name="com.example.kinoshop.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies">
        <action
            android:id="@+id/action_click_to_movie"
            app:destination="@id/movieDetail" />
    </fragment>

    <fragment
        android:id="@+id/navigationFavorites"
        android:name="com.example.kinoshop.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites">

        <action
            android:id="@+id/action_click_to_movie"
            app:destination="@id/favoriteDetail" />

    </fragment>

    <fragment
        android:id="@+id/navigationProfile"
        android:name="com.example.kinoshop.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/movieDetail"
        android:name="com.example.kinoshop.ui.movies.MovieDetailFragment"
        tools:layout="@layout/fragment_movie_detail">
        <argument
            android:name="movieId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/favoriteDetail"
        android:name="com.example.kinoshop.ui.favorites.FavoritesDetailFragment"
        tools:layout="@layout/fragment_favorite_detail">
        <argument
            android:name="movieId"
            app:argType="long" />
    </fragment>
</navigation>
